<resources>
    <string name="app_name">RestAPIExample</string>
    <string name="pub_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAs+JiaeX9DosDDuDMwXgO
cwef04Fn6m9PqpQSFxDVi9SMMT9GF/whaJtA6URrKExvcgfi6XAdPOE3iksGpd4w
XdYploiU/iX6jXv4oW4XvCfL5mxJzFVExgoz136GGXNBmY1/QZjKq9fSJcYTkc39
v/cDq8gwFKtu25actgjRXKAB6OzPD+Rs5axCkUo8AQz/DFHqyyn8aSM7BMJliw8b
gU65pyyyfUljeL6RY915RcFhE2DwmpLVhc0BpHL76SQVkVdTc5G95lgEbodYZ1Fa
PzxVMIFkH2H8zb3HzoGpFxXXWwmJ/fullLqjJrHilsAsx1aB01pC+uuZJEgMFtem
nQIDAQAB</string>
    <string name="login_failed">The username or password is incorrect</string>
    <string name="login_error">Error! Please try again!</string>
    <string name="login_success">Login Success! Redirecting you to main page</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="msg">Message</string>
    <string name="exit">Exit</string>
    <string name="channel_name">REST API</string>
    <string name="channel_description">Rest Api Notifcation Example</string>
    <string name="text_header">Rest Api Notifcation Example</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>
    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="share_text_with">Share this text with: </string>
    <string name="hello_world">Hello Fallas: </string>
    <string name="change_color">Change Color</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
