<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/tablayout"
        android:background="#0e4749"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    <TextView
        android:id="@+id/text_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header" />

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="#0b7376"
        android:id="@+id/pager"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/toolbar"
        android:background="#0e4749"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AlertDialog.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:text="@string/location"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:text="@string/msg"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/exit"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:text="@string/exit"
                android:textColor="#ffffff"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

</LinearLayout>